Minor refactor & optimization, removed updater & dead metrics